Load all List menu from Firebase to Service Side
Create Interface, Category Model, add_new_menu_layout, menu_item, add
library FirebaseUI, implement code in Home.java and MainActivity.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="SingIn"
+            android:text="@string/main_singin"
             android:textColor="@android:color/white"
             android:background="@color/btnSignActive"/>
 
