--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -20,9 +20,9 @@
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"
+            android:hint="@string/signin_phone_number"
             android:inputType="phone"
-            android:text="0988123344"
+            android:text="@string/signin_0988123344"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textSize="34sp"
@@ -36,9 +36,9 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/signin_password"
             android:inputType="textPassword"
-            android:text="123456"
+            android:text="@string/signin_1234"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textSize="34sp"
@@ -58,7 +58,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         android:layout_alignParentBottom="true"
-        android:text="SingIn"
+        android:text="@string/signin_singin"
         android:textColor="@android:color/white"
         android:background="@color/btnSignUp"/>
 
