--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,22 +7,22 @@
         <item
             android:id="@+id/nav_menu"
             android:icon="@drawable/ic_restaurant_black_24dp"
-            android:title="Menu" />
+            android:title="@string/drawer_menu" />
 
         <item
             android:id="@+id/nav_cart"
             android:icon="@drawable/ic_shopping_cart_black_24dp"
-            android:title="Cart" />
+            android:title="@string/drawer_cart" />
 
         <item
             android:id="@+id/nav_orders"
             android:icon="@drawable/ic_access_time_black_24dp"
-            android:title="Orders" />
+            android:title="@string/drawer_orders" />
 
         <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:title="Sing Out" />
+            android:title="@string/drawer_sing_out" />
     </group>
 
 </menu>
